--- a/db_service/Dockerfile
+++ b/db_service/Dockerfile
@@ -4,6 +4,6 @@ ENV MYSQL_ROOT_PASSWORD="p" \
     MYSQL_USER="mysql_client" \
     MYSQL_PASSWORD="p"
 
-COPY db.sql /docker-entrypoint-initdb.d/
+COPY db-restaurant.sql /docker-entrypoint-initdb.d/
 
 CMD ["--default-authentication-plugin=mysql_native_password"]
