Fix unicode problem
Mariadb container incorrectly imports .sql file as ascii, while
the database uses utf8mb4.
Update SQLQuery to use utf8mb4 charset.

--- a/db_service/Dockerfile
+++ b/db_service/Dockerfile
@@ -2,7 +2,8 @@ FROM mariadb:latest
 
 ENV MYSQL_ROOT_PASSWORD="p" \
     MYSQL_USER="mysql_client" \
-    MYSQL_PASSWORD="p"
+    MYSQL_PASSWORD="p" \
+    LANG=C.UTF-8
 
 COPY db-restaurant.sql /docker-entrypoint-initdb.d/
 
