--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,46 @@
 ##### Windows
 # Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
+**/Thumbs.db
+**/Thumbs.db:encryptable
+**/ehthumbs.db
+**/ehthumbs_vista.db
 
 # Dump file
-*.stackdump
+**/*.stackdump
 
 # Folder config file
-[Dd]esktop.ini
+**/[Dd]esktop.ini
 
 # Recycle Bin used on file shares
-$RECYCLE.BIN/
+**/$RECYCLE.BIN/
 
 # Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
+**/*.cab
+**/*.msi
+**/*.msix
+**/*.msm
+**/*.msp
 
 # Windows shortcuts
-*.lnk
+**/*.lnk
 
 ##### Linux
-*~
+**/*~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+**/.fuse_hidden*
 
 # KDE directory preferences
-.directory
+**/.directory
 
 # Linux trash folder which might appear on any partition or disk
-.Trash-*
+**/.Trash-*
 
 # .nfs files are created when an open file is removed but is still being accessed
-.nfs*
+**/.nfs*
 
 ##### MacOS
 # General
-.DS_Store
-.AppleDouble
-.LSOverride
+**/.DS_Store
+**/.AppleDouble
+**/.LSOverride
