--- a/db_service/Dockerfile
+++ b/db_service/Dockerfile
@@ -5,6 +5,7 @@ ENV MYSQL_ROOT_PASSWORD="p" \
     MYSQL_PASSWORD="p" \
     LANG=C.UTF-8
 
-COPY db-restaurant.sql /docker-entrypoint-initdb.d/
+COPY 01-db-restaurant.sql /docker-entrypoint-initdb.d/
+COPY 02-db-restaurant-procedures.sql /docker-entrypoint-initdb.d/
 
 CMD ["--default-authentication-plugin=mysql_native_password"]
